apps/people-finder/service.yml
apiVersion: v1
kind: Service
metadata:
  name: "people-finder"
spec:
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: "people-finder"
