apps/people-finder/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "people-finder"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: people-finder.apps.cloud-platforms-sandbox.k8s.integration.dsd.io
    http:
      paths:
      - path: /
        backend:
          serviceName: people-finder
          servicePort: 80
